--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 
+
 <body>
 
   <h1>Hello world
@@ -16,7 +17,7 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam harum temporibus molestiae culpa cupiditate aperiam, rerum ab necessitatibus, a eaque accusantium exercitationem eos, consectetur facilis nemo doloribus reiciendis provident. Accusamus!
   </p>
 
-  <script src="js/script.js"></script>
+  <script src="js/script11.js"></script>
 </body>
 
 </html>
